# chatbot-test

./: README.md  api-supabase.py  app-ui.py  app.py  chat-api.py  index-search.py  openapi.py  prompt-bak.txt  prompt.txt  pyproject.toml  query.py  test.py
templates/: chat.html  index.html
