[tool.poetry]
name = "whatap docs chatbot"
version = "0.1.0"
description = ""
authors = ["whatap-docs <kj.im@whatap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
flask = "^3.0.3"
flask-cors = "^4.0.1"
openapi = "^1.1.0"
streamlit = "^1.35.0"
supabase = "^2.4.6"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
